# Dine-Dynamo

./: README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  init.sh
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/api/: settings.py  urls.py
backend/batch/: task.py
backend/tgm/: admin.py  apps.py  models.py  serializers.py  urls.py  viewsets.py
backend/tgm/core/: models.py
backend/tgm/management/commands/: create_superuser.py  create_testuser.py
backend/tgm/serializers/: base_serializers.py  errors.py  exceptions.py  fields.py  mixins.py  serializers.py
backend/tgm/utils/: formater.py  insta.py  instagram.py  instagram2.py
frontend/: .eslintrc.json  .gitignore  .prettierignore  Dockerfile  next.config.js  package-lock.json  package.json  siteconfig.json  tailwind.config.js  tsconfig.json
frontend/api/: jwt.ts  urls.ts  user.ts
frontend/components/elements/: CompanyLogo.tsx  InstagramGraphTitle.tsx  LoadingSpin.tsx  PopoverNotificationIcon.tsx  PopoverUserIcon.tsx  ShopChangeBtn.tsx  ShopSettingBtn.tsx  SignInBtn.tsx  SignOutBtn.tsx  SignOutIconBtn.tsx  (+9 more)
frontend/hooks/: useAccessToken.ts  useAuth0AccessToken.ts  useAxiosRequest.ts  useGetTokensFromStore.ts
frontend/pages/: _app.tsx  comment.tsx  competitor.tsx  dashboard.tsx  facebook.tsx  index.tsx  instagram.tsx  like.tsx  settings.tsx  tenant.tsx  twitter.tsx
frontend/store/: atoms.tsx
frontend/styles/: common.module.scss  globals.scss  header.module.scss  instagram.module.scss
frontend/types/: index.ts
frontend/utils/: axiosClient.ts  functions.ts
(+67 files in other folders)
